--- a/index.html
+++ b/index.html
@@ -384,8 +384,8 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>🛒 Lista de Supermercado Familiar</h1>
-            <p>Organiza tus compras de manera fácil y eficiente</p>
+            <h1>🛒 Lista de Supermercado Familia con orejas</h1>
+            <p>Organizar compras de supermercado para no olvidarse de NADA!</p>
         </div>
 
         <div class="main-content">
