--- a/index.html
+++ b/index.html
@@ -684,8 +684,8 @@
                     <select id="family-member">
                         <option value="Papá">👨 Papá</option>
                         <option value="Mamá">👩 Mamá</option>
-                        <option value="Hijo/a 1">👦 Hijo/a 1</option>
-                        <option value="Hijo/a 2">👧 Hijo/a 2</option>
+                        <option value="Hijo/a 1">👦 Hijo</option>
+                        <option value="Hijo/a 2">👧 Hija </option>
                         <option value="Otro">👤 Otro</option>
                     </select>
                 </div>
