--- a/index.html
+++ b/index.html
@@ -763,10 +763,10 @@
                 <div class="form-group">
                     <label for="family-member">Creada por:</label>
                     <select id="family-member">
-                        <option value="Papá">👨 Papá</option>
+                        <option value="Papá">👨 BigBoss</option>
                         <option value="Mamá">👩 Mamá</option>
-                        <option value="Hijo/a 1">👦 Hijo</option>
-                        <option value="Hijo/a 2">👧 Hija</option>
+                        <option value="Hijo/a 1">👦 Javi</option>
+                        <option value="Hijo/a 2">👧 Dani</option>
                         <option value="Otro">👤 Otro</option>
                     </select>
                 </div>
