--- a/index.html
+++ b/index.html
@@ -897,7 +897,7 @@
             vegetables: ['Tomate', 'Cebolla', 'Ajo', 'Zanahoria', 'Lechuga', 'Pepino', 'Palta','Betarraga','coliflor','Brocoli','Zapallo amarillo','Zapallo italiano','Repollo','Morron','Cebollín','Cilantro','champiñon','Acelga','Ají verde','Limones','Choclo','Apío','Cochayuyo','Papa','Alcachofa','Jengibre','Espinaca'],
              fruits: ['Manzana', 'Plátano', 'Naranja', 'Limón', 'Frutilla', 'Uva', 'Pera','Sandía','Melón','Kiwi','Pomelo','Mango'],
              meat: ['Pollo', 'Carne molida','Carne a la olla','Carne a la parrilla', 'Escalopa', 'Bistec', 'Cerdo', 'Pescado', 'Jamón', 'Salchichas','Salame','Pepinillos','Aceitunas'],
-            dairy: ['Leche', 'Queso', 'Yogurt', 'Mantequilla', 'Crema', 'Queso crema', 'Postres','Leche cultivada','Leche condensada','Leche evaporada','Manjar'],
+            dairy: ['Leche', 'Queso', 'Yogurt', 'Mantequilla', 'Crema', 'Queso crema', 'Postres','Leche cultivada','Leche condensada','Leche evaporada','Manjar','Queso rallado','Huevos'],
             abarrotes : ['Aceite', 'Sal', 'Azúcar', 'Harinas con/sin','Aceite de oliva','Aceto balsamico','Vinagre tinto','Vinagre de manzana','Ketchup','Mostaza','Mayonessa','Jalea en polvo','postres en polvo','Mermelada','Polvo de hornear','Maicena','Pan rayado','Pan de molde','Quezadillas,','Palmitos','Jurel','Atún','Durazno','Puré','Salsa de tomate','Cereal','Natur','Galletas','Chocolate margo','Chocolate dulce','Snacks','Sopas','Bases pollo crispy','Base pollo mediterranio','Base de cazuela'],
             
            
